--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
     <header class="flex items-center justify-between">
       <h1 class="text-2xl font-bold">probplots-web</h1>
       <a href="/healthz" class="text-xs underline">/healthz</a>
-    </header>
+    <nav class="space-x-3 text-xs"><a class="underline" href="/about">/about</a><a class="underline" href="/docs">/docs</a></nav></header>
 
     <section class="grid md:grid-cols-2 gap-6">
       <form id="f-joint" class="p-4 rounded-xl bg-white shadow">
